--- a/wizard.html
+++ b/wizard.html
@@ -9,10 +9,41 @@
 <style>
 :root { --bg:#f3f4f9; --accent1:#7b61ff; --accent2:#00d4ff; --text:#222; }
 body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--text)}
-header{text-align:center;padding:1rem}
-h1{margin:0;font-size:1.6rem;background:linear-gradient(135deg,var(--accent1),var(--accent2));
-   -webkit-background-clip:text;-webkit-text-fill-color:transparent}
-.container{padding:1rem;max-width:500px;margin:auto}
+
+/* NAVBAR */
+.navbar{
+  position:fixed;top:0;left:0;right:0;z-index:10;
+  display:flex;justify-content:space-between;align-items:center;
+  padding:.8rem 1rem;transition:all .3s ease;
+}
+.navbar.scrolled{background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.1)}
+.logo{
+  font-size:1.4rem;font-weight:700;
+  background:linear-gradient(135deg,var(--accent1),var(--accent2));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent
+}
+.nav-links a{
+  margin-left:1rem;text-decoration:none;color:#fff;font-size:.95rem;font-weight:500;transition:.3s
+}
+.navbar.scrolled .nav-links a{color:#333}
+
+/* HERO */
+.hero{
+  text-align:center;padding:4rem 1rem 3rem;margin-top:50px;
+  background:linear-gradient(135deg,rgba(123,97,255,.8),rgba(0,212,255,.7)),
+             url('https://images.unsplash.com/photo-1606788075761-0d1a2e0f38a4?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+  color:#fff
+}
+.hero h1{font-size:2rem;margin-bottom:.5rem}
+.hero p{font-size:1.1rem;margin-bottom:1.5rem}
+.hero button{
+  padding:1rem 1.5rem;border:none;border-radius:12px;
+  background:#fff;color:#333;font-size:1rem;font-weight:600;cursor:pointer
+}
+
+/* FORM & PREVIEW */
+.container{padding:1rem;max-width:500px;margin:auto;margin-top:1rem}
 .page{display:none}
 .page.active{display:block;animation:fade .3s}
 input{width:100%;padding:1rem;margin:.6rem 0;border-radius:10px;border:1px solid #ccc;font-size:1rem}
@@ -26,11 +57,26 @@ iframe{width:100%;height:100%;border:none}
 </style>
 </head>
 <body onload="startWizard()">
-<header><h1>CreaLocale – GUIDO AI</h1></header>
 
-<div class="container">
+<!-- NAVBAR -->
+<nav class="navbar" id="navbar">
+  <div class="logo">CreaLocale</div>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+  </div>
+</nav>
+
+<!-- HERO -->
+<section class="hero">
+  <h1>Personalizza il tuo sito</h1>
+  <p>Inserisci i dati del tuo locale e genera subito un’anteprima basata sul demo scelto.</p>
+  <button onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'})">Inizia</button>
+</section>
+
+<!-- STEP 1 -->
+<div class="container" id="form">
   <div id="step1" class="page active">
-    <h2 style="font-size:1.2rem">Inserisci i dati del tuo locale</h2>
+    <h2 style="font-size:1.2rem">Inserisci i tuoi dati</h2>
     <input id="nome" placeholder="Nome locale">
     <input id="indirizzo" placeholder="Indirizzo">
     <input id="whatsapp" placeholder="WhatsApp">
@@ -39,6 +85,7 @@ iframe{width:100%;height:100%;border:none}
     <button onclick="location.href='index.html'">🏠 Torna all’inizio</button>
   </div>
 
+  <!-- STEP 2 -->
   <div id="step2" class="page">
     <h2 style="font-size:1.2rem">Anteprima sito</h2>
     <div class="preview-box">
@@ -84,6 +131,12 @@ function genera(){
   document.getElementById("step2").classList.add("active");
   guide(4);
 }
+/* Navbar scroll effect */
+window.addEventListener("scroll",()=>{
+  const nav=document.getElementById("navbar");
+  if(window.scrollY>50){nav.classList.add("scrolled");}
+  else{nav.classList.remove("scrolled");}
+});
 </script>
 </body>
 </html>
