--- a/premium.html
+++ b/premium.html
@@ -1,62 +1,107 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<title>CreaLocale Premium</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CreaLocale – Premium</title>
 <link rel="stylesheet" href="style.css">
 <script src="chatbot.js" defer></script>
 <script src="menu-loader.js" defer></script>
 <style>
-:root {
-  --bg:#0d0f18;
-  --card:rgba(255,255,255,.08);
-  --accent1:#7b61ff;
-  --accent2:#00d4ff;
-  --text:#f2f5ff;
-}
+:root { --bg:#f3f4f9; --accent1:#7b61ff; --accent2:#00d4ff; --text:#222; }
 body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--text)}
-header,footer{padding:1rem;text-align:center;background:#131523}
-h1{font-size:2rem;margin:0;background:linear-gradient(135deg,var(--accent1),var(--accent2));
-    -webkit-background-clip:text;-webkit-text-fill-color:transparent}
-.container{padding:1rem}
-.page{display:none;animation:fade .3s}
-.page.active{display:block}
-button{display:block;width:100%;padding:1.2rem;margin:.7rem 0;border:none;border-radius:14px;
-  background:linear-gradient(135deg,var(--accent1),var(--accent2));color:#fff;font-size:1.1rem;
-  box-shadow:0 6px 14px rgba(0,0,0,.4);cursor:pointer}
-.card{background:var(--card);border-radius:16px;padding:1rem;margin:.8rem 0;
-  box-shadow:0 6px 14px rgba(0,0,0,.5);backdrop-filter:blur(8px)}
-input{width:100%;padding:1rem;border-radius:12px;border:1px solid #333;background:#11152a;
-  color:#fff;margin:.6rem 0;font-size:1rem}
+
+/* NAVBAR */
+.navbar{
+  position:fixed;top:0;left:0;right:0;z-index:10;
+  display:flex;justify-content:space-between;align-items:center;
+  padding:.8rem 1rem;transition:all .3s ease;
+}
+.navbar.scrolled{background:#fff;box-shadow:0 2px 6px rgba(0,0,0,.1)}
+.logo{
+  font-size:1.4rem;font-weight:700;
+  background:linear-gradient(135deg,var(--accent1),var(--accent2));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent
+}
+.nav-links a{
+  margin-left:1rem;text-decoration:none;color:#fff;font-size:.95rem;font-weight:500;transition:.3s
+}
+.navbar.scrolled .nav-links a{color:#333}
+
+/* HERO */
+.hero{
+  text-align:center;padding:4rem 1rem 3rem;margin-top:50px;
+  background:linear-gradient(135deg,rgba(123,97,255,.8),rgba(0,212,255,.7)),
+             url('https://images.unsplash.com/photo-1606788075761-0d1a2e0f38a4?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat;
+  color:#fff
+}
+.hero h1{font-size:2rem;margin-bottom:.5rem}
+.hero p{font-size:1.1rem;margin-bottom:1.5rem}
+.hero .cta-btn{
+  display:inline-block;padding:.9rem 1.6rem;
+  border:none;border-radius:12px;
+  background:#fff;color:#333;font-size:1rem;font-weight:600;
+  cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,.2);transition:.2s;
+}
+.hero .cta-btn:hover{transform:scale(1.05)}
+
+/* FORM & PREVIEW */
+.container{padding:1rem;max-width:500px;margin:auto;margin-top:1rem}
+.page{display:none}
+.page.active{display:block;animation:fade .3s}
+input{width:100%;padding:1rem;margin:.6rem 0;border-radius:10px;border:1px solid #ccc;font-size:1rem}
+button{display:block;width:100%;padding:1rem;margin:.7rem 0;border:none;border-radius:12px;
+  background:linear-gradient(135deg,var(--accent1),var(--accent2));color:#fff;font-size:1.1rem;font-weight:600}
+.preview-box{position:relative;width:100%;height:420px;border:2px solid #ccc;border-radius:12px;overflow:hidden;margin-bottom:1rem}
+iframe{width:100%;height:100%;border:none}
+.overlay{position:absolute;top:10px;left:10px;right:10px;background:rgba(0,0,0,0.6);
+  padding:.6rem 1rem;border-radius:8px;color:#fff;font-size:.85rem;line-height:1.3}
 @keyframes fade{from{opacity:0}to{opacity:1}}
 </style>
 </head>
-<body onload="guide(3)">
-<header>
-  <h1>CreaLocale Premium</h1>
-  <p style="color:#aaa;font-size:.9rem">Wizard completo – GUIDO AI</p>
-</header>
+<body onload="startPremium()">
 
-<div class="container">
-  <div class="page active" id="page1">
-    <h2>Dati attività</h2>
+<!-- NAVBAR -->
+<nav class="navbar" id="navbar">
+  <div class="logo">CreaLocale</div>
+  <div class="nav-links">
+    <a href="index.html">Home</a>
+  </div>
+</nav>
+
+<!-- HERO -->
+<section class="hero">
+  <h1>Versione Premium</h1>
+  <p>Qui hai accesso a tutte le funzionalità e al menù completo senza limiti.</p>
+  <button class="cta-btn" onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'})">Inizia subito</button>
+</section>
+
+<!-- STEP 1 -->
+<div class="container" id="form">
+  <div id="step1" class="page active">
+    <h2 style="font-size:1.2rem">Inserisci i tuoi dati</h2>
     <input id="nome" placeholder="Nome locale">
     <input id="indirizzo" placeholder="Indirizzo">
     <input id="whatsapp" placeholder="WhatsApp">
-    <input id="piva" placeholder="Partita IVA">
-    <input id="email" placeholder="Email">
-    <button onclick="generaSito()">Genera sito completo</button>
+    <input id="piva" placeholder="Partita IVA (opzionale)">
+    <button onclick="generaPremium()">Genera anteprima completa</button>
+    <button onclick="location.href='index.html'">🏠 Torna all’inizio</button>
   </div>
 
-  <div class="page" id="page2">
-    <h2>Anteprima</h2>
-    <div id="preview" class="card"></div>
+  <!-- STEP 2 -->
+  <div id="step2" class="page">
+    <h2 style="font-size:1.2rem">Anteprima sito Premium</h2>
+    <div class="preview-box">
+      <iframe id="demoFrame"></iframe>
+      <div id="overlay" class="overlay"></div>
+    </div>
+    <div id="menuPremium" class="card"></div>
+    <button onclick="location.href='index.html'">🏠 Torna all’inizio</button>
   </div>
 </div>
 
-<footer><p style="color:#888;font-size:.8rem">&copy; 2025 CreaLocale</p></footer>
-
+<!-- Chatbot -->
 <button id="chatbot-toggle" onclick="toggleChatbot()">?</button>
 <div id="chatbot-box">
   <div id="chatbot-header">GUIDO AI</div>
@@ -68,26 +113,41 @@ input{width:100%;padding:1rem;border-radius:12px;border:1px solid #333;backgroun
 </div>
 
 <script>
-async function generaSito(){
-  let nome=document.getElementById("nome").value||"Locale Premium";
-  let indirizzo=document.getElementById("indirizzo").value||"Via Roma 1";
-  let wa=document.getElementById("whatsapp").value||"0000000000";
-  let piva=document.getElementById("piva").value||"IT00000000000";
-  let mail=document.getElementById("email").value||"info@email.it";
-
-  let html=`<h3>${nome}</h3>
-            <p>${indirizzo}</p>
-            <p>P.IVA: ${piva}</p>
-            <p>Email: <a href="mailto:${mail}" style="color:var(--accent2)">${mail}</a></p>
-            <a href="https://wa.me/${wa}?text=Vorrei ordinare" 
-               style="display:inline-block;margin:.5rem 0;color:var(--accent2)" target="_blank">
-               Ordina su WhatsApp</a>`;
-  html += await loadMenu(false);
-  document.getElementById("preview").innerHTML=html;
-  document.getElementById("page1").classList.remove("active");
-  document.getElementById("page2").classList.add("active");
-  guide(5);
+let tipo="", baseUrl="";
+function startPremium(){
+  const params=new URLSearchParams(location.search);
+  tipo=params.get("type")||"pizzeria";
+  if(tipo==="pizzeria") baseUrl="https://lucio1962.github.io/ciao-pizza/";
+  if(tipo==="pub") baseUrl="https://lucio1962.github.io/drinking-pub-2024/";
+  guide(1);
 }
+async function generaPremium(){
+  const nome=document.getElementById("nome").value||"Locale Demo Premium";
+  const indirizzo=document.getElementById("indirizzo").value||"Via Roma 1";
+  const wa=document.getElementById("whatsapp").value||"0000000000";
+  const piva=document.getElementById("piva").value||"";
+
+  document.getElementById("demoFrame").src=baseUrl;
+  document.getElementById("overlay").innerHTML=`
+    <strong>${nome}</strong><br>${indirizzo}<br>
+    WhatsApp: <a href="https://wa.me/${wa}" style="color:#0ff" target="_blank">${wa}</a><br>
+    ${piva? "P.IVA: "+piva : ""}
+  `;
+
+  // Carica menu completo
+  const menu = await loadMenu(false);
+  document.getElementById("menuPremium").innerHTML = "<h3>Menù completo</h3>"+menu;
+
+  document.getElementById("step1").classList.remove("active");
+  document.getElementById("step2").classList.add("active");
+  guide(4);
+}
+/* Navbar scroll effect */
+window.addEventListener("scroll",()=>{
+  const nav=document.getElementById("navbar");
+  if(window.scrollY>50){nav.classList.add("scrolled");}
+  else{nav.classList.remove("scrolled");}
+});
 </script>
 </body>
 </html>
