--- a/index.html
+++ b/index.html
@@ -35,10 +35,17 @@ body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--te
 .hero h1{font-size:2rem;margin-bottom:.5rem}
 .hero p{font-size:1.1rem;margin-bottom:1.5rem}
 .hero .cta-btn{
-  display:inline-block;padding:.9rem 1.6rem;
-  border:none;border-radius:12px;
-  background:#fff;color:#333;font-size:1rem;font-weight:600;
-  cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,.2);transition:.2s;
+  display:inline-block;
+  padding:.9rem 1.6rem;
+  border:none;
+  border-radius:12px;
+  background:#fff;
+  color:#333;
+  font-size:1rem;
+  font-weight:600;
+  cursor:pointer;
+  box-shadow:0 4px 10px rgba(0,0,0,.2);
+  transition:.2s;
 }
 .hero .cta-btn:hover{transform:scale(1.05)}
 /* CONTAINER */
@@ -72,7 +79,7 @@ body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--te
 <section class="hero">
   <h1>Crea il tuo sito in pochi click</h1>
   <p>La versione Premium è completa e pronta per diventare il tuo sito ufficiale.</p>
-  <button class="cta-btn" onclick="location.href='premium.html?type=pizzeria'">Inizia ora (Premium)</button>
+  <button class="cta-btn" onclick="location.href='premium.html?type=pizzeria'">Inizia subito (Premium)</button>
 </section>
 
 <!-- DEMO -->
