--- a/premium.html
+++ b/premium.html
@@ -39,10 +39,17 @@ body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--te
 .hero h1{font-size:2rem;margin-bottom:.5rem}
 .hero p{font-size:1.1rem;margin-bottom:1.5rem}
 .hero .cta-btn{
-  display:inline-block;padding:.9rem 1.6rem;
-  border:none;border-radius:12px;
-  background:#fff;color:#333;font-size:1rem;font-weight:600;
-  cursor:pointer;box-shadow:0 4px 10px rgba(0,0,0,.2);transition:.2s;
+  display:inline-block;
+  padding:.9rem 1.6rem;
+  border:none;
+  border-radius:12px;
+  background:#fff;
+  color:#333;
+  font-size:1rem;
+  font-weight:600;
+  cursor:pointer;
+  box-shadow:0 4px 10px rgba(0,0,0,.2);
+  transition:.2s;
 }
 .hero .cta-btn:hover{transform:scale(1.05)}
 
@@ -74,7 +81,9 @@ iframe{width:100%;height:100%;border:none}
 <section class="hero">
   <h1>Versione Premium</h1>
   <p>Qui hai accesso a tutte le funzionalità e al menù completo senza limiti.</p>
-  <button class="cta-btn" onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'})">Inizia subito</button>
+  <button class="cta-btn" onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'})">
+    Inizia subito
+  </button>
 </section>
 
 <!-- STEP 1 -->
