--- a/wizard.html
+++ b/wizard.html
@@ -37,10 +37,20 @@ body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--te
 }
 .hero h1{font-size:2rem;margin-bottom:.5rem}
 .hero p{font-size:1.1rem;margin-bottom:1.5rem}
-.hero button{
-  padding:1rem 1.5rem;border:none;border-radius:12px;
-  background:#fff;color:#333;font-size:1rem;font-weight:600;cursor:pointer
+.hero .cta-btn{
+  display:inline-block;
+  padding:.9rem 1.6rem;
+  border:none;
+  border-radius:12px;
+  background:#fff;
+  color:#333;
+  font-size:1rem;
+  font-weight:600;
+  cursor:pointer;
+  box-shadow:0 4px 10px rgba(0,0,0,.2);
+  transition:.2s;
 }
+.hero .cta-btn:hover{transform:scale(1.05)}
 
 /* FORM & PREVIEW */
 .container{padding:1rem;max-width:500px;margin:auto;margin-top:1rem}
@@ -70,7 +80,9 @@ iframe{width:100%;height:100%;border:none}
 <section class="hero">
   <h1>Personalizza il tuo sito</h1>
   <p>Inserisci i dati del tuo locale e genera subito un’anteprima basata sul demo scelto.</p>
-  <button onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'})">Inizia</button>
+  <button class="cta-btn" onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'})">
+    Inizia subito
+  </button>
 </section>
 
 <!-- STEP 1 -->
