--- a/premium.html
+++ b/premium.html
@@ -50,6 +50,8 @@ body{margin:0;font-family:"Inter",sans-serif;background:var(--bg);color:var(--te
   cursor:pointer;
   box-shadow:0 4px 10px rgba(0,0,0,.2);
   transition:.2s;
+  width:auto;          /* 👈 forza pulsante compatto */
+  min-width:140px;     /* 👈 larghezza minima decente */
 }
 .hero .cta-btn:hover{transform:scale(1.05)}
 
